--- a/index.jade
+++ b/index.jade
@@ -1,9 +1,61 @@
 doctype html
-html (lang="en")
+html(lang="en")
 	head
+		meta(charset="UTF-8")
 		title=pageTitle
+		link(rel="stylesheet",href="css/font-awesome.min.css")
+		link(rel="stylesheet",href="css/icomoon.css")
+		link(rel="stylesheet",href="css/bootstrap.min.css")
+		script(type="text/javascript",src="js/jquery.easing.min.js")
+		script(type="text/javascript",src="js/booststrap.min.js")
+		link(rel="stylesheet",href="css/main.css")
 	body
-		.row.fondo
-			h3 USER TESTING 360
-				ul.menu
+		.container
+			.row.fondo
+				.capa
+					.row
+						img.pull-left.spac_lados(src="image/user-r.png")
+						ul.spac_lados.list-unstyled.list-inline.pull-right
+							li.menu
+								a.color_white(href="#") ¿Qué me ofrece?
+							li
+								a.color_white(href="#") ¿Cómo funciona?
+							li
+								a.color_white(href="#") ¿Por qué usarlo?
+							li
+								a.color_white(href="#") Contáctanos
+						h1.titulo.text-center Obten videos de persona utilizando este siio Web.
+			.row.fondo_celes
+				.col-md-6.text-right
+					h4 Pruebalo Gratis
+					p Obten un video gratis en 5 minutos
+				.col-md-6.text-left
+					button.btn.btn-primary.btp Prueba Gartis
+			.row.text-center.servicios
+				h2.subtitulos Nuestros Servicios
+				.col-md-4
+					p.tamano_icn
+						i.icon-video
+					h4.color_blu Prueba Gratis
+					p lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc
+				.col-md-4
+					p.tamano_icn
+						i.icon-clock
+					h4.color_blu Prueba Gratis
+					p lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc
+				.col-md-4
+					p.tamano_icn
+						i.icon-documents
+					h4.color_blu Prueba Gratis
+					p lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc
+				img.icono_fin(src="image/separador.png")
+			.row.color_negro
+				.col-md-6
+					h4 ejmploas da
+ 				.col-md-6
+ 					p asd asd asd
+
+					
+
+
 					
