--- a/css/main.scss
+++ b/css/main.scss
@@ -45,3 +45,7 @@
 .servicios{
   border-bottom:1px solid #404040;
 }
+hr{ background-color:#A0A0A0; margin-top:-4%;}
+.tam_lg{ width:40%;}
+.mg_cent{ margin-left: 40%;}
+.img_lap{ width: 100%; }
