--- a/index.jade
+++ b/index.jade
@@ -14,7 +14,7 @@ html(lang="en")
 			.row.fondo
 				.capa
 					.row
-						img.pull-left.spac_lados(src="image/user-r.png")
+						img.pull-left.spac_lados.img-responsive(src="image/user-r.png")
 						ul.spac_lados.list-unstyled.list-inline.pull-right
 							li.menu
 								a.color_white(href="#") ¿Qué me ofrece?
@@ -49,12 +49,23 @@ html(lang="en")
 					h4.color_blu Prueba Gratis
 					p lorem jd ajdjsad jasdjasnd adjandja asjcnasdjc asjcndajc ascjadc
 				img.icono_fin(src="image/separador.png")
-			.row.color_negro
+				hr
+			.row
 				.col-md-6
-					h4 ejmploas da
- 				.col-md-6
- 					p asd asd asd
+					h2.color_blu.text-center Ejemplo de
+						img.tam_lg(src="image/logo-2.jpg")
+					p Lorem hashhas shhahsha ashahs sjcshc sajcasjcsac sackcjsacsdhajscascjasjsjjas
+						p.color_blu nsndnasdnandsdasad
+					p sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j cjasc acj cj cjas cjs cjsac jascsa cjasc jac ajsc jcs acjas cj scj jas cjsa cjsa c caca
+					img.btp.mg_cent.img-responsive(src="image/flecha.png")
+				.col-md-6
+					p video
+			.row
+				.col-md-6.img_cp
+					img.img_lap.img-responsive(src="image/sec-2.jpg")
 
+
+			
 					
 
 
