--- a/index.jade
+++ b/index.jade
@@ -10,6 +10,7 @@ html(lang="en")
 		script(type="text/javascript",src="js/booststrap.min.js")
 		link(rel="stylesheet",href="css/main.css")
 	body
+		- var user= "escape";
 		.container
 			.row.fondo
 				.capa
@@ -31,7 +32,7 @@ html(lang="en")
 					p Obten un video gratis en 5 minutos
 				.col-md-6.text-left
 					button.btn.btn-primary.btp Prueba Gartis
-			.row.text-center.servicios
+			.row.text-center
 				h2.subtitulos Nuestros Servicios
 				.col-md-4
 					p.tamano_icn
@@ -51,18 +52,76 @@ html(lang="en")
 				img.icono_fin(src="image/separador.png")
 				hr
 			.row
-				.col-md-6
+				.col-md-6.mgle4.mga6
 					h2.color_blu.text-center Ejemplo de
 						img.tam_lg(src="image/logo-2.jpg")
 					p Lorem hashhas shhahsha ashahs sjcshc sajcasjcsac sackcjsacsdhajscascjasjsjjas
 						p.color_blu nsndnasdnandsdasad
 					p sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j cjasc acj cj cjas cjs cjsac jascsa cjasc jac ajsc jcs acjas cj scj jas cjsa cjsa c caca
 					img.btp.mg_cent.img-responsive(src="image/flecha.png")
-				.col-md-6
+				.col-md-6.mga6
 					p video
 			.row
-				.col-md-6.img_cp
+				.col-md-6
 					img.img_lap.img-responsive(src="image/sec-2.jpg")
+					p.derecha
+						i.icon-pencil.icon
+					p.derecha
+						i.icon-search.icon
+					p.derecha
+						i.icon-pencil.icon
+					img.derecha_icon(src="image/separador.png")
+				.col-md-6.mgle4
+					h4.mga6 Lo Quiero ¿Que hago?
+					h6.color_blu Paso1:envianos tu link
+					p.mgb5 Al darle click asdj sadjsand asjc csajc sc cajs sajc jcs a csja cjsac
+					h6.color_blu Paso2:envianos tu link
+					p Al darle click asdj sadjsand asjc
+					ul
+						li A primera vista
+						li A primera vista
+						li A primera vista
+					p.mgb5 hjhb jhb j jnbb hhhh jjjj
+					h6.color_blu Paso3:envianos tu link
+					p.mgb5 Al darle click asdj sadjsand asjc csajc sc cajs sajc jcs a csja cjsac
+			.row
+				.col-md-6.mgle4.mga6
+					h2.color_blu.text-center Por qué usar
+						img.tam_lg(src="image/logo-2.jpg")
+					p Lorem ha adas dad ad asda shhas shhahsha ashahs sjcshc sajcasjcsacspackcjsacsdhajscascjasjsjjas #{user.color_blu}
+					spam sjjasdjsajd
+					p sajdnasjdnsajsdasd asdascas cjasjcndjc dacnjdncjadncjdancjandcjda
+					spam ajnajdfnajfna
+					p asjnskaakjfdkajad dvjdv dvjdsjvsdv
+					ul.btp
+						li A primera vista
+						li A primera vista
+						li A primera vista
+					p sajdjsajdasjdsjsabdjsbdjabsjdabsjdjbjcbjcbjbcjbajcbajs cjascbsc cjasbc casjcbj cajcsc jjjjj casjc j jasjcs acjas cj scj jas cjsa cjsa c caca
+				.col-md-6.mga6
+					img.imgjov(src="image/banner.jpg")
+			.row.text-center.fondo_celes
+				.col-md-6.btp
+					h4 Pruebalo Gratis
+					p Obten un video gratis en 5 minutos
+				.col-md-6.btp
+					button.btn.btn-primary.btp Prueba Gartis
+			.row.fondo_azul
+				.col-md-6.mg2
+					p Escribanos a
+					p.color_blu sjsajascnjsacn@gmail.com
+					p Telefono: 4651516
+				.col-md-6.mg2
+					p.pdlefmas
+						i.icon-pencil.icon_footer
+						i.icon-search.icon_footer
+					p.pdleft csnjc@cnscacsac sach
+
+
+
+
+
+
 
 
 			
