--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-*{outline:1px solid rgba(255,0,0,0.3);}
+/**{outline:1px solid rgba(255,0,0,0.3);}*/
 .fondo{background-image: url("../image/banner.jpg");
 	background-position: right bottom;color:#fff;}
 .capa {background-color: rgba(49, 52, 52, 0.8);padding: 1% 0% 0%;}
@@ -29,5 +29,9 @@ hr{ background-color:#A0A0A0; margin-top:-4%;}
 .pdleft{padding-left:73%;}
 .pdlefmas{padding-left:87%;}
 .fondo_contc{background-image: url("../image/large.jpg"); background-size:cover;}
-.form-horizontal{margin: 20% 26%;background: #fff; }
+.form-horizontal{margin: 13% 26%;background: #fff;border-top:6px solid #337AB7;padding: 2% 5% 0%;}
 .form-horizontal .control-label{text-align:left;}
+.form-group > p{margin-bottom:0%; text-decoration: underline;}
+span{color:red;}
+strong{color: #2065DE;}
+
