terminado con responsi..

--- a/contact.jade
+++ b/contact.jade
@@ -2,16 +2,17 @@ doctype html
 html(lang="en")
 	head
 		meta(charset="UTF-8")
+		meta(name="viewport" content="width=device-width,initial-scale=1")
 		title=contacto
-		link(rel="stylesheet",href="css/font-awesome.min.css")
-		link(rel="stylesheet",href="css/icomoon.css")
-		link(rel="stylesheet",href="css/bootstrap.min.css")
-		script(type="text/javascript",src="js/jquery.easing.min.js")
-		script(type="text/javascript",src="js/booststrap.min.js")
-		link(rel="stylesheet",href="css/main.css")
+		link(rel="stylesheet" href="css/font-awesome.min.css")
+		link(rel="stylesheet" href="css/icomoon.css")
+		link(rel="stylesheet" href="css/bootstrap.min.css")
+		script(type="text/javascript" src="js/jquery.easing.min.js")
+		script(type="text/javascript" src="js/booststrap.min.js")
+		link(rel="stylesheet" href="css/main.css")
 	body.fondo_contc
 		form.form-horizontal
-			.h1.btp Formulario User Testing 360
+			.h1.btp.text-center Formulario User Testing 360
 			hr.btp
 			.form-group
 				label.col-sm-4.control-label(for='inputEmail3') Nombre <span> * </span>
