--- a/css/main.scss
+++ b/css/main.scss
@@ -34,4 +34,8 @@ hr{ background-color:#A0A0A0; margin-top:-4%;}
 .form-group > p{margin-bottom:0%; text-decoration: underline;}
 span{color:red;}
 strong{color: #2065DE;}
-
+@media (max-width:500px)
+{
+	.form-horizontal{margin: 20% 10%;}
+	
+}
